# draft

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml  test_api.py
api/: Dockerfile  requirements.txt
api/app/: config.py  database.py  emergency_bot.py  main.py
api/app/middleware/: logging_middleware.py
api/app/models/: __init__.py  category.py  content.py  user.py  view_history.py  watchlist.py
api/app/routers/: __init__.py  analytics.py  bot_content.py  categories.py  content.py  users.py  view_history.py  watchlist.py
api/app/schemas/: __init__.py  analytics.py  category.py  content.py  user.py  view_history.py  watchlist.py
api/app/services/: __init__.py  analytics_service.py  category_service.py  content_service.py  imdb_service.py  user_service.py  view_history_service.py  watchlist_service.py  worker_adapter.py  worker_client.py
api/app/utils/: __init__.py  dependencies.py  logger.py  pagination.py  validators.py
shared/: constants.py  exceptions.py  logger.py  models.py
telegram_bot/: bot.py  requirements.txt
telegram_bot/app/: config.py
telegram_bot/app/handlers/: add_record_handlers.py  analytics.py  help.py  search.py  settings.py  start.py  view_history.py  watchlist.py
telegram_bot/app/keyboards/: confirmation_keyboards.py  history_keyboards.py  main_menu.py  rating_keyboards.py  search_keyboards.py  watchlist_keyboards.py
telegram_bot/app/utils/: formatters.py  (+4 more)
web_analytics/: Dockerfile  app.py  requirements.txt
web_analytics/pages/: main_dashboard.py
worker/: requirements.txt  worker.py
(+21 files in other folders)
